# pybox

./: .env.shared  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
workspaces/example/: README.md  example.ipynb  pyproject.toml
